@@ -1,18 +1,25 @@
 package com.project.port.common;
 
-import com.project.port.dto.PilotClientRequest;
-import com.project.port.dto.PilotClientResponse;
-import com.project.port.dto.PilotDto;
-import com.project.port.dto.PilotResponse;
-import com.project.port.dto.SpaceshipClientResponse;
-import com.project.port.dto.SpaceshipDto;
-import com.project.port.dto.SpaceshipResponse;
-import com.project.port.exception.ErrorResponse;
-import org.springframework.http.HttpStatus;
-
 import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
+
+import org.springframework.http.HttpStatus;
+
+import com.project.port.dto.pilot.AddPilotClientRequest;
+import com.project.port.dto.pilot.AddPilotRequest;
+import com.project.port.dto.pilot.PilotClientResponse;
+import com.project.port.dto.pilot.PilotDto;
+import com.project.port.dto.pilot.PilotResponse;
+import com.project.port.dto.spaceship.AddSpaceshipClientRequest;
+import com.project.port.dto.spaceship.AddSpaceshipRequest;
+import com.project.port.dto.spaceship.SpaceshipClientResponse;
+import com.project.port.dto.spaceship.SpaceshipDto;
+import com.project.port.dto.spaceship.SpaceshipResponse;
+import com.project.port.dto.spaceship.UpdateSpaceshipClientRequest;
+import com.project.port.dto.spaceship.UpdateSpaceshipRequest;
+import com.project.port.dto.spaceship.UpdateSpaceshipResponse;
+import com.project.port.exception.ErrorResponse;
 
 public class Constant {
 
@@ -28,7 +35,19 @@ public class Constant {
 
   private static final List<String> SPACESHIP_ARMAMENT = List.of("Laser cannons");
 
+  private static final String UPDATE_SPACESHIP_NAME = "Tie Fighter V2";
+
+  private static final String UPDATE_SPACESHIP_CLASS_TYPE = "Experimental Starfighter";
+
+  private static final int UPDATE_SPACESHIP_PAYLOAD = 100;
+
+  private static final int UPDATE_SPACESHIP_MAX_SPEED = 2000;
+
+  private static final List<String> UPDATE_SPACESHIP_ARMAMENT = List.of("Laser cannons", "Plasma bombs");
+
   private static final String PILOT_NAME = "Darth Vader";
+
+  private static final String NEW_PILOT_NAME = "Darth Sidious";
 
   private static final String PILOT_SPECIES = "Human";
 
@@ -36,12 +55,19 @@ public class Constant {
 
   private static final List<String> PILOT_WEAPONS = List.of("Lightsaber");
 
+  private static final String SPACESHIP_NOT_FOUND = "Spaceship not found";
+
+  private static final String PILOT_EXISTS = "Pilots already exist";
+
   public static SpaceshipDto buildSpaceshipDto() {
-    return SpaceshipDto.builder()
+    final PilotDto pilotDto = buildPilotDto();
+
+    return SpaceshipDto
+        .builder()
         .id(ID)
         .name(SPACESHIP_NAME)
         .classType(SPACESHIP_CLASS_TYPE)
-        .crew(List.of(buildPilotDto()))
+        .crew(List.of(pilotDto))
         .crewIds(List.of(ID))
         .payload(SPACESHIP_PAYLOAD)
         .maxSpeed(SPACESHIP_MAX_SPEED)
@@ -49,12 +75,29 @@ public class Constant {
         .build();
   }
 
-  public static SpaceshipDto buildSpaceshipDtoWithNoCrewDetails() {
-    return SpaceshipDto.builder()
+  public static SpaceshipDto buildSpaceshipDtoWithNoCrewIds() {
+    final PilotDto pilotDto = buildPilotDto();
+
+    return SpaceshipDto
+        .builder()
         .id(ID)
         .name(SPACESHIP_NAME)
         .classType(SPACESHIP_CLASS_TYPE)
-        .crew(Collections.emptyList())
+        .crew(List.of(pilotDto))
+        .crewIds(null)
+        .payload(SPACESHIP_PAYLOAD)
+        .maxSpeed(SPACESHIP_MAX_SPEED)
+        .armament(SPACESHIP_ARMAMENT)
+        .build();
+  }
+
+  public static SpaceshipDto buildSpaceshipDtoWithNoCrewDetails() {
+    return SpaceshipDto
+        .builder()
+        .id(ID)
+        .name(SPACESHIP_NAME)
+        .classType(SPACESHIP_CLASS_TYPE)
+        .crew(null)
         .crewIds(List.of(ID))
         .payload(SPACESHIP_PAYLOAD)
         .maxSpeed(SPACESHIP_MAX_SPEED)
@@ -63,12 +106,13 @@ public class Constant {
   }
 
   public static SpaceshipDto buildSpaceshipDtoWithNoCrewDetailsAndCrewIds() {
-    return SpaceshipDto.builder()
+    return SpaceshipDto
+        .builder()
         .id(ID)
         .name(SPACESHIP_NAME)
         .classType(SPACESHIP_CLASS_TYPE)
-        .crew(Collections.emptyList())
-        .crewIds(Collections.emptyList())
+        .crew(null)
+        .crewIds(null)
         .payload(SPACESHIP_PAYLOAD)
         .maxSpeed(SPACESHIP_MAX_SPEED)
         .armament(SPACESHIP_ARMAMENT)
@@ -76,11 +120,43 @@ public class Constant {
   }
 
   public static SpaceshipResponse buildSpaceshipResponse() {
-    return SpaceshipResponse.builder()
+    final PilotResponse pilotResponse = buildPilotResponse();
+
+    return SpaceshipResponse
+        .builder()
         .id(ID)
         .name(SPACESHIP_NAME)
         .classType(SPACESHIP_CLASS_TYPE)
-        .crew(List.of(buildPilotResponse()))
+        .crew(List.of(pilotResponse))
+        .payload(SPACESHIP_PAYLOAD)
+        .maxSpeed(SPACESHIP_MAX_SPEED)
+        .armament(SPACESHIP_ARMAMENT)
+        .build();
+  }
+
+  public static SpaceshipResponse buildAddSpaceshipResponse() {
+    final PilotResponse addPilotResponse = buildAddPilotResponse();
+
+    return SpaceshipResponse
+        .builder()
+        .id(ID)
+        .name(SPACESHIP_NAME)
+        .classType(SPACESHIP_CLASS_TYPE)
+        .crew(List.of(addPilotResponse))
+        .payload(SPACESHIP_PAYLOAD)
+        .maxSpeed(SPACESHIP_MAX_SPEED)
+        .armament(SPACESHIP_ARMAMENT)
+        .build();
+  }
+
+  public static AddSpaceshipRequest buildAddSpaceshipRequest() {
+    final AddPilotRequest addPilotRequest = buildAddPilotRequest();
+
+    return AddSpaceshipRequest
+        .builder()
+        .name(SPACESHIP_NAME)
+        .classType(SPACESHIP_CLASS_TYPE)
+        .crew(List.of(addPilotRequest))
         .payload(SPACESHIP_PAYLOAD)
         .maxSpeed(SPACESHIP_MAX_SPEED)
         .armament(SPACESHIP_ARMAMENT)
@@ -88,7 +164,8 @@ public class Constant {
   }
 
   public static SpaceshipClientResponse buildSpaceshipClientResponse() {
-    return SpaceshipClientResponse.builder()
+    return SpaceshipClientResponse
+        .builder()
         .id(ID)
         .name(SPACESHIP_NAME)
         .classType(SPACESHIP_CLASS_TYPE)
@@ -100,7 +177,8 @@ public class Constant {
   }
 
   public static SpaceshipClientResponse buildSpaceshipClientResponseWithNoCrewIds() {
-    return SpaceshipClientResponse.builder()
+    return SpaceshipClientResponse
+        .builder()
         .id(ID)
         .name(SPACESHIP_NAME)
         .classType(SPACESHIP_CLASS_TYPE)
@@ -111,8 +189,110 @@ public class Constant {
         .build();
   }
 
+  public static AddSpaceshipClientRequest buildAddSpaceshipClientRequest() {
+    return AddSpaceshipClientRequest
+        .builder()
+        .name(SPACESHIP_NAME)
+        .classType(SPACESHIP_CLASS_TYPE)
+        .maxSpeed(SPACESHIP_MAX_SPEED)
+        .payload(SPACESHIP_PAYLOAD)
+        .crewIds(List.of(ID))
+        .armament(SPACESHIP_ARMAMENT)
+        .build();
+  }
+
+  public static UpdateSpaceshipRequest buildUpdateSpaceshipRequest() {
+    return UpdateSpaceshipRequest
+        .builder()
+        .name(UPDATE_SPACESHIP_NAME)
+        .classType(UPDATE_SPACESHIP_CLASS_TYPE)
+        .payload(UPDATE_SPACESHIP_PAYLOAD)
+        .maxSpeed(UPDATE_SPACESHIP_MAX_SPEED)
+        .armament(UPDATE_SPACESHIP_ARMAMENT)
+        .build();
+  }
+
+  public static SpaceshipDto buildUpdateSpaceshipDtoWithNoCrewIds() {
+    return SpaceshipDto
+        .builder()
+        .name(UPDATE_SPACESHIP_NAME)
+        .classType(UPDATE_SPACESHIP_CLASS_TYPE)
+        .payload(UPDATE_SPACESHIP_PAYLOAD)
+        .maxSpeed(UPDATE_SPACESHIP_MAX_SPEED)
+        .crewIds(null)
+        .crew(null)
+        .armament(UPDATE_SPACESHIP_ARMAMENT)
+        .build();
+  }
+
+  public static SpaceshipDto buildUpdateSpaceshipDtoWithNoId() {
+    return SpaceshipDto
+        .builder()
+        .name(UPDATE_SPACESHIP_NAME)
+        .classType(UPDATE_SPACESHIP_CLASS_TYPE)
+        .payload(UPDATE_SPACESHIP_PAYLOAD)
+        .maxSpeed(UPDATE_SPACESHIP_MAX_SPEED)
+        .crewIds(List.of(ID))
+        .crew(null)
+        .armament(UPDATE_SPACESHIP_ARMAMENT)
+        .build();
+  }
+
+  public static SpaceshipDto buildUpdateSpaceshipDto() {
+    return SpaceshipDto
+        .builder()
+        .id(ID)
+        .name(UPDATE_SPACESHIP_NAME)
+        .classType(UPDATE_SPACESHIP_CLASS_TYPE)
+        .payload(UPDATE_SPACESHIP_PAYLOAD)
+        .maxSpeed(UPDATE_SPACESHIP_MAX_SPEED)
+        .crewIds(List.of(ID))
+        .crew(null)
+        .armament(UPDATE_SPACESHIP_ARMAMENT)
+        .build();
+  }
+
+  public static UpdateSpaceshipClientRequest buildUpdateSpaceshipClientRequest() {
+    return UpdateSpaceshipClientRequest
+        .builder()
+        .name(UPDATE_SPACESHIP_NAME)
+        .classType(UPDATE_SPACESHIP_CLASS_TYPE)
+        .payload(UPDATE_SPACESHIP_PAYLOAD)
+        .maxSpeed(UPDATE_SPACESHIP_MAX_SPEED)
+        .armament(UPDATE_SPACESHIP_ARMAMENT)
+        .crewIds(List.of(ID))
+        .build();
+  }
+
+  public static SpaceshipClientResponse buildUpdateSpaceshipClientResponse() {
+    return SpaceshipClientResponse
+        .builder()
+        .id(ID)
+        .name(UPDATE_SPACESHIP_NAME)
+        .classType(UPDATE_SPACESHIP_CLASS_TYPE)
+        .payload(UPDATE_SPACESHIP_PAYLOAD)
+        .maxSpeed(UPDATE_SPACESHIP_MAX_SPEED)
+        .armament(UPDATE_SPACESHIP_ARMAMENT)
+        .crewIds(List.of(ID))
+        .build();
+  }
+
+  public static UpdateSpaceshipResponse buildUpdateSpaceshipResponse() {
+    return UpdateSpaceshipResponse
+        .builder()
+        .id(ID)
+        .name(UPDATE_SPACESHIP_NAME)
+        .classType(UPDATE_SPACESHIP_CLASS_TYPE)
+        .payload(UPDATE_SPACESHIP_PAYLOAD)
+        .maxSpeed(UPDATE_SPACESHIP_MAX_SPEED)
+        .armament(UPDATE_SPACESHIP_ARMAMENT)
+        .crewIds(List.of(ID))
+        .build();
+  }
+
   public static PilotClientResponse buildPilotClientResponse() {
-    return PilotClientResponse.builder()
+    return PilotClientResponse
+        .builder()
         .id(ID)
         .name(PILOT_NAME)
         .species(PILOT_SPECIES)
@@ -121,8 +301,20 @@ public class Constant {
         .build();
   }
 
+  public static PilotClientResponse buildAddPilotClientResponse() {
+    return PilotClientResponse
+        .builder()
+        .id(ID)
+        .name(NEW_PILOT_NAME)
+        .species(PILOT_SPECIES)
+        .profession(PILOT_PROFESSION)
+        .weapons(PILOT_WEAPONS)
+        .build();
+  }
+
   public static PilotDto buildPilotDto() {
-    return PilotDto.builder()
+    return PilotDto
+        .builder()
         .id(ID)
         .name(PILOT_NAME)
         .species(PILOT_SPECIES)
@@ -132,7 +324,8 @@ public class Constant {
   }
 
   public static PilotResponse buildPilotResponse() {
-    return PilotResponse.builder()
+    return PilotResponse
+        .builder()
         .id(ID)
         .name(PILOT_NAME)
         .species(PILOT_SPECIES)
@@ -141,19 +334,126 @@ public class Constant {
         .build();
   }
 
-  public static PilotClientRequest buildPilotClientRequest() {
-    return PilotClientRequest.builder()
-        .pilotIds(List.of(ID))
+  public static PilotDto buildAddPilotDto() {
+    return PilotDto
+        .builder()
+        .id(null)
+        .name(NEW_PILOT_NAME)
+        .species(PILOT_SPECIES)
+        .profession(PILOT_PROFESSION)
+        .weapons(PILOT_WEAPONS)
         .build();
+  }
+
+  public static PilotResponse buildAddPilotResponse() {
+    return PilotResponse
+        .builder()
+        .id(ID)
+        .name(NEW_PILOT_NAME)
+        .species(PILOT_SPECIES)
+        .profession(PILOT_PROFESSION)
+        .weapons(PILOT_WEAPONS)
+        .build();
+  }
+
+  public static AddPilotRequest buildAddPilotRequest() {
+    return AddPilotRequest
+        .builder()
+        .name(NEW_PILOT_NAME)
+        .species(PILOT_SPECIES)
+        .profession(PILOT_PROFESSION)
+        .weapons(PILOT_WEAPONS)
+        .build();
+  }
+
+  public static AddPilotClientRequest buildAddPilotClientRequest() {
+    return AddPilotClientRequest
+        .builder()
+        .name(NEW_PILOT_NAME)
+        .species(PILOT_SPECIES)
+        .profession(PILOT_PROFESSION)
+        .weapons(PILOT_WEAPONS)
+        .build();
+  }
+
+  public static AddSpaceshipRequest buildInvalidAddSpaceshipRequest() {
+    final AddPilotRequest invalidAddPilotRequest = AddPilotRequest
+        .builder()
+        .name(null)
+        .species("")
+        .profession(PILOT_PROFESSION)
+        .weapons(PILOT_WEAPONS)
+        .build();
+
+    return AddSpaceshipRequest
+        .builder()
+        .name(null)
+        .payload(20000)
+        .classType(" ")
+        .maxSpeed(20000)
+        .armament(List.of("1", "2", "3", "4", "5", "6", "7", "8", "9", "10", "11"))
+        .crew(List.of(invalidAddPilotRequest))
+        .build();
+  }
+
+  public static UpdateSpaceshipResponse buildInvalidUpdateSpaceshipRequest() {
+    return UpdateSpaceshipResponse
+        .builder()
+        .name(null)
+        .payload(20000)
+        .classType(" ")
+        .maxSpeed(20000)
+        .armament(List.of("1", "2", "3", "4", "5", "6", "7", "8", "9", "10", "11"))
+        .build();
+  }
+
+  public static ErrorResponse buildAddValidationFailedErrorResponse() {
+    final HttpStatus status = HttpStatus.BAD_REQUEST;
+    final ErrorResponse errorResponse = ErrorResponse
+        .builder()
+        .status(status.value())
+        .error(status.name())
+        .message("Validation error. Check 'errors' field for details")
+        .build();
+
+    errorResponse.addValidationError("payload", "must be less than or equal to 10000");
+    errorResponse.addValidationError("classType", "must not be blank");
+    errorResponse.addValidationError("name", "must not be blank");
+    errorResponse.addValidationError("armament", "size must be between 0 and 10");
+    errorResponse.addValidationError("maxSpeed", "must be less than or equal to 10000");
+    errorResponse.addValidationError("crew[0].species", "must not be blank");
+    errorResponse.addValidationError("crew[0].name", "must not be blank");
+
+    return errorResponse;
+  }
+
+  public static ErrorResponse buildUpdateValidationFailedErrorResponse() {
+    final HttpStatus status = HttpStatus.BAD_REQUEST;
+    final ErrorResponse errorResponse = ErrorResponse
+        .builder()
+        .status(status.value())
+        .error(status.name())
+        .message("Validation error. Check 'errors' field for details")
+        .build();
+
+    errorResponse.addValidationError("payload", "must be less than or equal to 10000");
+    errorResponse.addValidationError("classType", "must not be blank");
+    errorResponse.addValidationError("name", "must not be blank");
+    errorResponse.addValidationError("armament", "size must be between 0 and 10");
+    errorResponse.addValidationError("maxSpeed", "must be less than or equal to 10000");
+
+    return errorResponse;
   }
 
   public static ErrorResponse buildNotFoundErrorResponse() {
     final HttpStatus status = HttpStatus.NOT_FOUND;
 
-    return ErrorResponse.builder()
-        .status(status.value())
-        .error(status.name())
-        .message("Spaceship not found")
-        .build();
+    return ErrorResponse.builder().status(status.value()).error(status.name()).message(SPACESHIP_NOT_FOUND).build();
+  }
+
+  public static ErrorResponse buildPilotExistsErrorResponse() {
+    final HttpStatus status = HttpStatus.BAD_REQUEST;
+
+    return ErrorResponse.builder().status(status.value()).error(status.name()).message(PILOT_EXISTS).build();
   }
 }
